Update card image styling

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -57,6 +57,14 @@ nav ul li a {
   margin: 10px 0;
 }
 
+.card img {
+  object-fit: cover;
+  margin: 10px;
+  height: 300px;
+  width: 300px;
+  max-width: 100%;
+}
+
 #api-status {
   margin-top: 100px;
   font-family: monospace;
