--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,75 +1,232 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap");
+
+* {
+  font-family: "Open Sans", sans-serif;
 }
 
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 0 10px;
+html,
+body {
+  margin: 0px;
+  padding: 0px;
+}
+
+nav {
+  background-color: #222222;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
 }
 
-h2 a {
-  color: #fff;
-  text-decoration: none;
+nav .logo {
+  display: flex;
+  align-items: center;
+}
+
+nav .logo img {
+  width: 56px;
+  height: 56px;
+  padding: 8px;
+  border-radius: 50%;
+}
+
+nav .logo .title {
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  padding-left: 20px;
 }
 
 nav ul {
-  list-style-type: none;
-  padding-top: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  list-style: none;
 }
 
 nav ul li {
-  display: inline;
-  margin: 0 5px;
+  color: white;
+  padding: 22px 40px;
+  background-color: #333333;
+}
+
+nav ul li:hover {
+  background-color: #222222;
+}
+
+nav ul .active {
+  background-color: #222222;
 }
 
 nav ul li a {
-  color: #fff;
+  color: white;
   text-decoration: none;
 }
 
-.grid {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-}
-
-.card {
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  padding: 20px;
-  width: 300px;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-}
-
-.card h2 {
-  font-size: 20px;
-  margin: 0;
-}
-
-.card p {
-  margin: 10px 0;
-}
-
-.card img {
-  object-fit: cover;
-  margin: 10px;
-  height: 300px;
-  width: 300px;
-  max-width: 100%;
-}
-
-#api-status {
-  margin-top: 100px;
-  font-family: monospace;
-  text-align: center;
-  font-size: 1rem;
-  background-color: rgb(219, 219, 219);
+#main {
   padding: 10px;
+  display: grid;
+  gap: 10px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+}
+
+.gallery-item {
+  transition: all ease-in-out 500ms;
+  position: relative;
+  background-color: black;
+  height: 40vh;
+}
+
+.gallery-item img {
+  transition: all ease-in-out 500ms;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top;
+}
+
+.gallery-item img:hover {
+  transform: scale(0.95);
+  opacity: 0.5;
+}
+
+.gallery-item .heart {
+  position: absolute;
+  bottom: 2px;
+  left: 16px;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.gallery-item .heart:hover {
+  color: red;
+}
+
+.imageDetails {
+  position: absolute;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  font-weight: bold;
+  z-index: 1;
+  top: 20px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.imageDetails img {
+  position: absolute;
+  top: 0;
+  transition: all ease-in-out 500ms;
+  max-width: 80%;
+  max-height: 60%;
+  padding: 10px;
+  background-color: black;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: top;
+  z-index: 1;
+}
+
+.imageDetails .close {
+  position: absolute;
+  top: 2px;
+  right: 16px;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.imageDetails .close:hover {
+  color: red;
+}
+
+.imageDetails .title {
+  position: absolute;
+  bottom: 30%;
+  width: 100%;
+  text-align: center;
+  z-index: 1;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  padding-left: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.imageDetails .description {
+  position: absolute;
+  bottom: 25%;
+  width: 100%;
+  text-align: center;
+  z-index: 1;
+  color: white;
+  font-size: 16px;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+}
+
+.imageDetails .category {
+  position: absolute;
+  bottom: 2px;
+  left: 16px;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.imageDetails .author {
+  position: absolute;
+  bottom: 2px;
+  right: 16px;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.imageDetails .imageHeart {
+  position: absolute;
+  bottom: 50px;
+  left: 16px;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.imageDetails .imageHeart:hover {
+  color: red;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #333333;
+  color: white;
+  text-align: center;
+  padding: 8px;
 }
